# Health-chat-bot

./: .gitignore  README.md
Frontend/: chat-style.css  chat.html  chat.js
backend/: .gitignore  Dockerfile  app.py  chatbotmodelnew.pth  head.txt  package.json  pnpm-lock.yaml  pyproject.toml  requirement.txt  requirements.txt  utils.py
backend/chroma/: chroma-collections.parquet  chroma.sqlite3
backend/chroma/index/: id_to_uuid_8f09c6d7-2287-4261-be96-88059447dbc7.pkl  index_metadata_8f09c6d7-2287-4261-be96-88059447dbc7.pkl  uuid_to_id_8f09c6d7-2287-4261-be96-88059447dbc7.pkl
chroma/: chroma.sqlite3
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/components/: navbar.tsx
frontend/components/ChatPage/: ChatInput.tsx  FormatMessage.tsx  Main.tsx  Text.tsx  Welcome.tsx
frontend/components/ChatPage/Buttons/: Similarity.tsx  Summary.tsx  fetch.ts
frontend/config/: site.ts
frontend/src/: App.tsx
frontend/src/components/: Landing.tsx  Predictor.tsx  Selector.tsx
frontend/src/pages/: Chat.tsx  Landing.tsx  Selector.tsx  Symptoms.css  Symptoms.tsx  test.tsx
frontend/src/pages/components/: DeleteDocumentIcon.tsx  FadeinTitle.tsx  Message.css  Message.tsx  submit.tsx
frontend/types/: index.ts
