[tool.poetry]
name = "health-chat-bot-backend"
version = "0.1.0"
description = ""
authors = ["Tejas013 <tejasmadhukar6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
Flask-Cors = "^4.0.0"
pandas = "^2.2.0"
torch = "^2.2.0"
langchain = "^0.1.7"
python-dotenv = "^1.0.1"
openai = "^1.12.0"
chromadb = "0.3.29"
tiktoken = "^0.6.0"
langchain-community = "^0.0.20"
langchain-openai = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
